Fix button cancel and title modal cause on iOS

--- a/scss/ui/list-causes.scss
+++ b/scss/ui/list-causes.scss
@@ -32,3 +32,10 @@
     }
   }
 }
+
+.bar.bar-positive .title{
+  left: 0 !important;
+  right: 0 !important;
+  text-align: left !important;
+  font-size: 16px;
+}
